Small sonarlint fixes and refactoring